# patchworks-mcp

./: .env.example  .gitignore  LICENSE  README.md  anthropic_tools.json  auth_helper.py  docs_search.py  mcp_server_instructions.md  patchworks-knowledge-base.md  patchworks_client.py  pyproject.toml  pytest.ini  server.py
custom/: README.md  __init__.py  tools.py
defaults/: schemas.py  tools.py
providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  tool_converter.py
tests/: README.md  __init__.py  conftest.py  test_patchworks_client.py  test_schemas.py  test_tools_integration.py
